@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: April 8, 2010</p>
+      <p>Last Updated: April 11, 2010</p>
     </td>
   </tr>
 </table>
@@ -1668,6 +1668,9 @@ nuttx-5.3 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* configs/olimex-lpc2378, arch/arm/include/lpc2378, and arch/arm/src/lpc2378 -
 	  Basic port of the NXP 2378 on the Olimex board contributed by
 	  Rommel Marcelo.
+	* arch/arm/src/sam3u/sam3u_internal.h - Fixed a critical bug in the AT91SAM3U
+	  PIO decoding.  No PIOs greater than 15 could be used on any port!  Obviously,
+	  no one has been using this port.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
